[package]
name = "dysentropy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dysentropy"
path = "./src/main.rs"
required-features=["anyhow", "clap"]

[features]
std = []


[dependencies]
anyhow = { version = "1", optional = true }
clap = { version = "4.1", features = ["derive"], optional = true }

[dev-dependencies]
anyhow = "1"